# DWNTP

./: .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml  invoke_test.sh  query_test.sh  run-tests.sh
MTU/client/: Cargo.toml
MTU/client/src/: main.rs
MTU/events/src/: error.rs  event.rs
RTU/: Cargo.toml
RTU/src/: main.rs
caliper/: benchmark-config.yaml  generate-config.js  network-config.yaml  package-lock.json  package.json  report.html  run-multi-benchmarks.sh  short-config.yaml
caliper/real-world/: .gitignore  README.md  benchmark-config.yaml  network-config.template.yaml  realworld.env.example  run-realworld-benchmark.sh
caliper/real-world/workload/: realLogEvent.js  realQueryEvent.js
caliper/reports/: report-16-nodes.html  report-2-nodes.html  report-4-nodes.html  report-8-nodes.html
caliper/scripts/: patch-docker-monitor.js
caliper/workload/: logEvent.js  mixedEvent.js  queryEvent.js
caliper/workload/utils/: phaseLogger.js
chaincode/: go.mod  main.go
crates/dwntp-chaincode/: Cargo.toml  Dockerfile  build.rs  go.mod
crates/dwntp-chaincode-go/: Dockerfile  go.mod  main.go
crates/dwntp-chaincode/src/: main.rs
crates/dwntp-client/: Cargo.toml
crates/dwntp-client/src/: main.rs
crates/dwntp-events/: Cargo.toml
crates/dwntp-events/src/: event.rs  lib.rs
crates/dwntp-runtime/: Cargo.toml
crates/dwntp-runtime/src/: lib.rs
crates/pallet-dwntp/: Cargo.toml
crates/pallet-dwntp/src/: lib.rs  mock.rs  tests.rs
crates/sim/: Cargo.toml
crates/sim/src/: crypto.rs  framing.rs  lib.rs  types.rs
docs/: metrics_definitions.tex  network_encryption_verification.md  security_test_forged_identity.md  testing_and_analysis.tex
docs/20260420_100458-to-20260420_110724-old/a_old/: Blockchain Ledger Height (Blocks)-data-as-joinbyfield-2026-04-20 11_17_58.csv  Cumulative Transactions Over Time-data-as-joinbyfield-2026-04-20 11_16_21.csv  Endorsement Latency Over Time-data-2026-04-20 11_16_49.csv  Fabric Process CPU Usage-data-as-joinbyfield-2026-04-20 11_17_04.csv  Fabric Process Memory Usage (Resident Set Size)-data-as-joinbyfield-2026-04-20 11_17_10.csv  Transaction Failures & MVCC Conflicts-data-as-joinbyfield-2026-04-20 11_16_56.csv  Transactions Per Second (TPS)-data-as-joinbyfield-2026-04-20 11_16_30.csv
docs/backup/: Block Processing Time-data-as-joinbyfield-2026-04-20 09_14_39.csv  Block Storage Commit Latency-data-as-joinbyfield-2026-04-20 09_14_21.csv  Blockchain Ledger Height (Blocks)-data-as-joinbyfield-2026-04-20 09_15_03.csv  Cumulative Transactions Over Time-data-as-joinbyfield-2026-04-20 09_12_39.csv  Endorsement Latency Over Time-data-2026-04-20 09_13_26.csv  Fabric Process CPU Usage-data-as-joinbyfield-2026-04-20 09_13_56.csv  Fabric Process Memory Usage (Resident Set Size)-data-as-joinbyfield-2026-04-20 09_14_08.csv  Gossip Protocol Traffic-data-as-joinbyfield-2026-04-20 09_14_55.csv  Orderer Enqueue Duration (Mempool)-data-2026-04-20 09_14_48.csv  Orderer _ Consensus Health-data-as-joinbyfield-2026-04-20 09_14_15.csv  State DB Commit (Write) Latency-data-as-joinbyfield-2026-04-20 09_14_33.csv  Transaction Failures & MVCC Conflicts-data-as-joinbyfield-2026-04-20 09_13_44.csv  Transactions Per Second (TPS)-data-as-joinbyfield-2026-04-20 09_13_09.csv
docs/backup2/: Block Storage Commit Latency-data-as-joinbyfield-2026-04-20 11_17_24.csv  Orderer Enqueue Duration (Mempool)-data-2026-04-20 11_17_43.csv
docs/grafana/: Block Processing Time-data-as-joinbyfield-2026-04-20 11_17_37.csv  Blockchain Ledger Height (Blocks)-data-as-joinbyfield-2026-05-03 19_07_58.csv  Cumulative Transactions Over Time-data-as-joinbyfield-2026-05-03 19_06_27.csv  Endorsement Latency Over Time-data-2026-05-03 19_07_25.csv  Fabric Process CPU Usage-data-as-joinbyfield-2026-05-03 19_07_32.csv  Fabric Process Memory Usage (Resident Set Size)-data-as-joinbyfield-2026-05-03 19_07_39.csv  Gossip Protocol Traffic-data-as-joinbyfield-2026-04-20 11_17_49.csv  Gossip Protocol Traffic-data-as-joinbyfield-2026-05-03 19_07_50.csv  Orderer _ Consensus Health-data-as-joinbyfield-2026-04-20 11_17_18.csv  State DB Commit (Write) Latency-data-as-joinbyfield-2026-04-20 11_17_30.csv  Transactions Per Second (TPS)-data-as-joinbyfield-2026-05-03 19_06_33.csv  align_csvs.py  generate_graphs.py  run_timestamps.csv
docs/grafana/cpu/: Fabric Process CPU Usage-data-as-joinbyfield-2026-04-15 11_16_55.csv  cpu_16_nodes.csv  cpu_2_nodes.csv  cpu_4_nodes.csv  cpu_8_nodes.csv  cpu_clean.csv
docs/grafana/cpu_basic/: CPU Basic-data-as-joinbyfield-2026-04-15 11_16_15.csv  cpu_basic_16_nodes.csv  cpu_basic_2_nodes.csv  cpu_basic_4_nodes.csv  cpu_basic_8_nodes.csv  cpu_basic_clean.csv
docs/grafana/cpu_overall/: CPU-data-as-joinbyfield-2026-04-15 11_18_10.csv  cpu_overall_16_nodes.csv  cpu_overall_2_nodes.csv  cpu_overall_4_nodes.csv  cpu_overall_8_nodes.csv  cpu_overall_clean.csv
docs/grafana/disk_iops/: Disk IOps-data-as-joinbyfield-2026-04-15 11_19_00.csv  disk_iops_16_nodes.csv  disk_iops_2_nodes.csv  disk_iops_4_nodes.csv  disk_iops_8_nodes.csv  disk_iops_clean.csv
docs/grafana/i_o_usage_read___write/: I_O Usage Read _ Write-data-as-joinbyfield-2026-04-15 11_19_13.csv  i_o_usage_read___write_16_nodes.csv  i_o_usage_read___write_2_nodes.csv  i_o_usage_read___write_4_nodes.csv  i_o_usage_read___write_8_nodes.csv  i_o_usage_read___write_clean.csv
docs/grafana/i_o_utilization/: I_O Utilization-data-2026-04-15 11_19_28.csv  i_o_utilization_16_nodes.csv  i_o_utilization_2_nodes.csv  i_o_utilization_4_nodes.csv  i_o_utilization_8_nodes.csv  i_o_utilization_clean.csv
docs/grafana/memory_basic/: memory_basic_16_nodes.csv  (+5 more)
network/: README_REMOTE_NODE.md  configtx.yaml  container-runtime.sh  crypto-config.yaml  generate.sh  onboard_remote_peer.sh  redeploy.sh  setup_remote_peer.sh  start_network.sh
network/chaincode-external/: connection.json  metadata.json
network/channel-artifacts/: dwntpchannel.block  genesis.block
network/monitoring/: prometheus.yml  start_monitoring.sh
src/: constants.rs  enums.rs  lib.rs  main.rs
src/receiver/: listen.rs
tests/: e2e_fabric.sh
(+541 files in other folders)
