[workspace]
members = ["crates/dwntp-events"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DWNTP Team"]
license = "GPL-3.0-only"
repository = "https://github.com/BigDaddE/DWNTP"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# Cryptography
sha2 = "0.10"
sp-core = { version = "28.0", features = ["default"] }
sp-std = { version = "14.0" }
sp-runtime = { version = "31.0", features = ["default"] }

# Substrate/Polkadot SDK
frame-support = { version = "28.0", features = ["default"] }
frame-system = { version = "28.0", features = ["default"] }
frame-executive = { version = "28.0" }
pallet-timestamp = { version = "27.0", features = ["default"] }

# Consensus
sp-consensus-aura = { version = "0.32" }
sp-consensus-babe = { version = "0.32" }
sp-consensus = { version = "0.32" }
sp-finality-grandpa = { version = "28.0" }

# Utilities
codec = { version = "3.0", features = ["derive"] }
scale-info = { version = "2.0", features = ["derive"] }
log = "0.4"
