[workspace]
members = [
    "crates/dwntp-events",
    "crates/dwntp-chaincode",
    "crates/dwntp-client"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DWNTP Team"]
license = "GPL-3.0-only"
repository = "https://github.com/BigDaddE/DWNTP"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"

# Utilities
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.32", features = ["full"] }

# Fabric Chaincode (Optional Community SDK / Protobufs)
# fabric-contract = "0.5" # Community SDK for Fabric
