[package]
name = "dwntp-chaincode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Hyperledger Fabric Rust chaincode for DWNTP control events"

[dependencies]
dwntp-events = { path = "../dwntp-events" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
tokio-stream = "0.1.18"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
base64 = "0.22.1"

[build-dependencies]
tonic-build = "0.12"
