[package]
name = "dwntp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Client application to interact with the DWNTP Hyperledger Fabric network via CLI"

[dependencies]
dwntp-events = { path = "../dwntp-events" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
base64 = "0.22.1"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
