[package]
name = "dwntp-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core RTU control event data structures and utilities for DWNTP"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true

[dev-dependencies]
