[package]
name = "dwntp-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight standalone Polkadot-SDK runtime for DWNTP"

[dependencies]
codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }

# Substrate core dependencies
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-executive = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# DWNTP Local Pallets
pallet-dwntp = { path = "../pallet-dwntp", default-features = false }

[build-dependencies]
# Required for Substrate runtime WASM building
# substrate-wasm-builder = { version = "...", optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-dwntp/std",
]
