[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mtu"
path = "src/bin/mtu.rs"

[[bin]]
name = "rtu"
path = "src/bin/rtu.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
