[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mtu"
path = "src/bin/mtu.rs"

[[bin]]
name = "rtu"
path = "src/bin/rtu.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
